bin/testsuite/tests/compiler/src/errors/compiler5013.swg
#global testerror "Err0628"
#test
{
    var ptr: *s32
    let a    = @mkinterface(ptr, s32, 0)
}
